#21---Fixed-alignment-on-the-search-page

--- a/src/search/css/style.css
+++ b/src/search/css/style.css
@@ -148,9 +148,13 @@ background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
   color: white;
 }
 
-#result {
+#resultDiv {
   text-align: center;
   margin: 10px;
+}
+
+#result {
+  margin: 20px;
 }
 
 #texty {
